fixed-some-spacing-bugs

--- a/components/footer/Footerbox.css
+++ b/components/footer/Footerbox.css
@@ -78,7 +78,7 @@
 }
 
 .footer-right-section .footer-stay {
-  padding: 20px;
+  padding: 22px;
   display: flex;
   width: 174px;
   height: 23px;
@@ -111,13 +111,13 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
-  margin-top: 28px;
 }
 
 .footer-links-1 {
   display: inline-flex;
   flex-direction: column;
   list-style-type: none;
+  margin-top: 28px;
 }
 
 .footer-links-1 li {
@@ -135,6 +135,7 @@
   display: inline-flex;
   flex-direction: column;
   list-style-type: none;
+  margin-top: 28px;
 }
 
 .footer-links-2 li {
